whitelisting time field

--- a/app/views/children/_form.html.erb
+++ b/app/views/children/_form.html.erb
@@ -19,6 +19,10 @@
     <%= f.label :parent_cell %><br>
     <%= f.text_area :parent_cell %>
   </div>
+  <div class="field">
+    <%= f.label :time %><br>
+    <%= f.text_area :time %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
