--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 	<div class="container">
-		<form class="form-signin col-md-4 col-md-offset-4" role="form">
+		<form class="form-signin col-md-4 col-md-offset-4" role="form" action="parent.html">
 			<h2 class="form-signin-heading">Enter Username</h2>
 			<input type="text" class="form-control" placeholder="User Name" required autofocus>
 			<br>
