--- a/app/views/children/_form.html.erb
+++ b/app/views/children/_form.html.erb
@@ -23,6 +23,10 @@
     <%= f.label :time %><br>
     <%= f.text_area :time %>
   </div>
+  <div class="field">
+    <%= f.label :bus_id %><br>
+    <%= f.text_area :bus_id %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
