--- a/app/templates/parent.html
+++ b/app/templates/parent.html
@@ -40,16 +40,15 @@
 
 		function initialize() {
 			directionsDisplay = new google.maps.DirectionsRenderer();
-			var chicago = new google.maps.LatLng(18.563181, 73.84062);
+			var image = '../assets/images/bus.png';
+			var myLatLng = new google.maps.LatLng(18.563181, 73.84062);
 			var mapOptions = {
 				zoom:16,
-				center: chicago
+				center: myLatLng
 			};
 			map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
 			directionsDisplay.setMap(map);
 			
-			var image = '../assets/images/bus.png';
-			var myLatLng = new google.maps.LatLng(18.563181, 73.84062);
 			new google.maps.Marker({
 				position: myLatLng,
 				map: map,
@@ -57,8 +56,9 @@
 			});
 
 			$.ajax({
-				url: 'http://10.228.153.188:3000/buses/1',
+				url: 'http://10.228.153.188:3000/buses/1.json',
 				type: 'GET',
+				datatype: 'jsonp',
 				contentType: "application/json",
 				success: function (data) {
 					console.log(data);
@@ -67,7 +67,6 @@
 					console.log(data);
 				}
 			});
-			
 		}
 
 		google.maps.event.addDomListener(window, 'load', initialize);
