--- a/app/templates/driver.html
+++ b/app/templates/driver.html
@@ -10,16 +10,16 @@
 	<style>
 		.bus {
 			max-width: 640px;
-			margin: 0 auto;
 			padding: 0 20px;
 			border: 5px solid gray;
+			margin: 10px auto;
 		}
 
 		.bus-front {
-			border-width: 0 5px 5px 5px;
+			border-width: 0 2px 2px 2px;
 			border-color: gray;
 			border-style: solid; 
-			height: 200px;
+			height: 120px;
 		}
 
 		.seat {
@@ -32,18 +32,18 @@
 
 		.seat.left {
 			text-align: left;
-			border-right: 5px solid gray;
+			border-right: 1px solid gray;
 		}
 
 		.seat.right {
 			text-align: right;
-			border-left: 5px solid gray;
+			border-left: 1px solid gray;
 		}
 
 		.seat img {
 			border: 1px solid gray;
 			padding: 5px;
-			height: 100px;
+			height: 64px;
 			-webkit-transition: .3s all;
 			-moz-transition: .3s all;
 			-ms-transition: .3s all;
@@ -108,6 +108,26 @@
 			</div>
 		</div>
 	</div>
+	
+	<script>
+		navigator.geolocation.watchPosition(function(position) {
+			updateBusLocation(position.coords.latitude, position.coords.longitude);
+		});
+
+		function updateBusLocation (lat, lang) {
+			$.ajax({
+				url: 'http://10.228.153.188:3000/buses/1',
+				type: 'PUT',
+				contentType: 'application/json',
+				data: {
+					location: lat.toString() + ", " + lang.toString()
+				},
+				success: function (data) {
+					console.log(data);
+				}
+			});
+		}
+	</script>
 
 	<script src="../assets/javascripts/jquery.min.js"></script>
 	<script src="../assets/javascripts/underscore.min.js"></script>
