--- a/app/views/templates/driver.html.erb
+++ b/app/views/templates/driver.html.erb
@@ -124,20 +124,20 @@
 				url: '/buses/1.json',
 				type: 'PATCH',
 				contentType: 'application/json',
-        dataType:"html",
+        		dataType:"json",
 			//	data: {
 			//		//"location": lat.toString() + ", " + lang.toString()
 			//		location: "hello"
 			//	},
-        data: {'location':'abc'},
-				success: function (data) {
-					console.log(data);
-				},
-				error: function (data) {
-					console.log(data);
+		        data: JSON.stringify({'location':'abc'}),
+						success: function (data) {
+							console.log(data);
+						},
+						error: function (data) {
+							console.log(data);
+						}
+					});
 				}
-			});
-		}
 	</script>
 </body>
 </html>
