MOdifing Ajax Url from absolute to relative

--- a/app/views/templates/driver.html.erb
+++ b/app/views/templates/driver.html.erb
@@ -121,7 +121,7 @@
 
 		function updateBusLocation (lat, lang) {
 			$.ajax({
-				url: '/buses/1.json',
+				url: 'buses/1.json',
 				type: 'PATCH',
 				contentType: 'application/json',
         		dataType:"json",
