Convert ajax URL from absolute path to relative

--- a/app/views/templates/parent.html.erb
+++ b/app/views/templates/parent.html.erb
@@ -43,7 +43,7 @@
 			
 
 			$.ajax({
-				url: 'http://10.228.153.188:3000/buses/1.json',
+				url: 'buses/1.json',
 				type: 'GET',
 				datatype: 'jsonp',
 				contentType: "application/json",
