--- a/app/views/children/_form.html.erb
+++ b/app/views/children/_form.html.erb
@@ -27,6 +27,10 @@
     <%= f.label :bus_id %><br>
     <%= f.text_area :bus_id %>
   </div>
+  <div class="field">
+    <%= f.label :name %><br>
+    <%= f.text_area :name %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
