--- a/app/views/children/show.html.erb
+++ b/app/views/children/show.html.erb
@@ -1,6 +1,10 @@
 <p id="notice"><%= notice %></p>
 
 <p>
+  <strong>Name:</strong>
+  <%= @child.name %>
+</p>
+<p>
   <strong>Status:</strong>
   <%= @child.status %>
 </p>
