--- a/app/views/templates/driver.html.erb
+++ b/app/views/templates/driver.html.erb
@@ -117,61 +117,43 @@
 	<div class="modal fade">
 		<div class="modal-dialog">
 			<div class="modal-content">
-				<!-- <div class="modal-header">
-					<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-					<h4 class="modal-title child-name">Modal title</h4>
-				</div> -->
-				<div class="modal-body">
-					<p></p>
-				</div>
-				<div class="modal-footer">
-					<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-				</div>
-			</div><!-- /.modal-content -->
-		</div><!-- /.modal-dialog -->
-	</div><!-- /.modal -->
+				
+			</div>
+		</div>
+	</div>
 
 	<script type="text/template" id="seatTemplate">
-		<p class="container">
-			<div class="row">
-				<div class="col-md-6">
-					<h1><%= name %></h1>
-					<h2>Status: <%= status %></h2>
+		<div class="modal-body">
+			<p class="container">
+				<div class="row">
+					<div class="col-md-6">
+						<h1><%= name %></h1>
+						<h2>Status: <%= status %></h2>
+					</div>
+					<div class="col-md-6">
+						<img src="../../assets/images/1.png"/>
+					</div>
 				</div>
-				<div class="col-md-6">
-					<img src="../../assets/images/1.png"/>
-				</div>
-			</div>
-
-		</p>
+			</p>
+		</div>
+		<div class="modal-footer">
+			<button type="button" class="btn btn-default change-status" data-dismiss="modal">Reached Home</button>
+			<button type="button" class="btn btn-default change-status" data-dismiss="modal">Reached School</button>
+			<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+		</div>
 	</script>
-
+	
 	<script>
 		navigator.geolocation.watchPosition(function(position) {
-			updateBusLocation(position.coords.latitude, position.coords.longitude);
+			updateData('buses/1.json', {
+				'location': position.coords.latitude.toString() + ", " + position.coords.longitude.toString()
+			});
 		});
 
-		function updateBusLocation (lat, lang) {
-			$.ajax({
-				url: 'buses/1.json',
-				type: 'PATCH',
-				contentType: 'application/json',
-				dataType:"json",
-				data: JSON.stringify({
-					'location':lat.toString() + ", " + lang.toString()
-				}),
-				success: function (data) {
-					console.log(data);
-				},
-				error: function (data) {
-					console.log(data);
-				}
-			});
-		}
-
+		// On click show student info
 		$(".seat img").on('click', function(event) {
 			event.preventDefault();
-
+			
 			$(".modal").modal();
 
 			$.ajax({
@@ -181,14 +163,35 @@
 					$(".modal-body").html(seatTempalteStr);
 				},
 				error: function () {
-					// var response = {"id":1,"name":"Pappu","status":"travelling","parent_cell":"778899334422","created_at":"2014-05-31T12:38:50.987Z","updated_at":"2014-06-01T04:17:18.233Z"};
+					var response = {"id":1,"name":"Pappu","status":"travelling","parent_cell":"778899334422","created_at":"2014-05-31T12:38:50.987Z","updated_at":"2014-06-01T04:17:18.233Z"};
 
-					// var seatTempalteStr = _.template($("#seatTemplate").html(), response);
-
-					// $(".modal-body").html(seatTempalteStr);
+					var seatTempalteStr = _.template($("#seatTemplate").html(), response);
+					$(".modal-content").html(seatTempalteStr).find(".change-status").on('click', function() {
+						event.preventDefault();
+						
+						updateData("children/1.json", {
+							status: "reached home"
+						});
+					});
 				}
 			});
 		});
+
+		function updateData(url, data) {
+			$.ajax({
+				url: url,
+				type: 'PATCH',
+				contentType: 'application/json',
+				dataType:"json",
+				data: JSON.stringify(data),
+				success: function (data) {
+					console.log(data);
+				},
+				error: function (data) {
+					console.log(data);
+				}
+			});
+		}
 	</script>
 </body>
 </html>
