--- a/app/views/templates/driver.html.erb
+++ b/app/views/templates/driver.html.erb
@@ -168,11 +168,6 @@
 				success: function (response) {
 					var seatTempalteStr = _.template($("#seatTemplate").html(), response);
 					$(".modal-body").html(seatTempalteStr);
-				},
-				error: function () {
-					var response = {"id":1,"name":"Pappu","status":"travelling","parent_cell":"778899334422","created_at":"2014-05-31T12:38:50.987Z","updated_at":"2014-06-01T04:17:18.233Z"};
-
-					var seatTempalteStr = _.template($("#seatTemplate").html(), response);
 					$(".modal-content").html(seatTempalteStr).find(".change-status").on('click', function() {
 						event.preventDefault();
 						
@@ -180,6 +175,18 @@
 							status: "reached home"
 						});
 					});
+				},
+				error: function () {
+					// var response = {"id":1,"name":"Pappu","status":"travelling","parent_cell":"778899334422","created_at":"2014-05-31T12:38:50.987Z","updated_at":"2014-06-01T04:17:18.233Z"};
+
+					// var seatTempalteStr = _.template($("#seatTemplate").html(), response);
+					// $(".modal-content").html(seatTempalteStr).find(".change-status").on('click', function() {
+					// 	event.preventDefault();
+						
+					// 	updateData("children/1.json", {
+					// 		status: "reached home"
+					// 	});
+					// });
 				}
 			});
 		});
