dynamic button text

--- a/app/views/templates/driver.html.erb
+++ b/app/views/templates/driver.html.erb
@@ -172,7 +172,7 @@
 						event.preventDefault();
 						
 						updateData("children/1.json", {
-							status: "reached home"
+							status: this.innerHTML.toLowerCase()
 						});
 					});
 				},
