--- a/app/views/templates/driver.html.erb
+++ b/app/views/templates/driver.html.erb
@@ -137,7 +137,8 @@
 			</p>
 		</div>
 		<div class="modal-footer">
-			<button type="button" class="btn btn-default change-status" data-dismiss="modal">Reached Home</button>
+			<button type="button" class="btn btn-default change-status" data-dismiss="modal">Aboarded The Bus</button>
+			<button type="button" class="btn btn-default change-status" data-dismiss="modal">Alighted The Bus</button>
 			<button type="button" class="btn btn-default change-status" data-dismiss="modal">Reached School</button>
 			<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
 		</div>
