added view location link + time format improved

--- a/app/views/user_mailer/notification_mail.html.erb
+++ b/app/views/user_mailer/notification_mail.html.erb
@@ -1,3 +1,3 @@
 <h1>Mail from school</h1>
 <p>Current time <%= Time.now.asctime %></p>
-<a href="http://10.228.153.188:3000/driver">View Your child's current location</a>children/1/edit
+<a href="http://10.228.153.188:3000/driver">View Your child's current location</a>
